force-app/main/default/objects/BrowniePoints__c/BrowniePoints__c.object-meta.xml
<CustomObject>
    <label>Brownie Points</label>
    <nameField>
        <label>Brownie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brownie Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>