force-app/main/default/objects/BrowniePoints__c/fields/BP_Number__c.field-meta.xml
<CustomField>
    <fullName>BP_Number__c</fullName>
    <externalId>true</externalId>
    <label>BP Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>