force-app/main/default/objects/BrowniePoints__c/fields/Event_Month__c.field-meta.xml
<CustomField>
    <fullName>Event_Month__c</fullName>
    <label>Event Month</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>