force-app/main/default/objects/BrowniePoints__c/fields/Event_Year__c.field-meta.xml
<CustomField>
    <fullName>Event_Year__c</fullName>
    <label>Event Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>