force-app/main/default/objects/BrowniePoints__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year Month</label>
    <referenceTo>Year_Month__c</referenceTo>
    <relationshipLabel>Brownie Points</relationshipLabel>
    <relationshipName>Brownie_Points</relationshipName>
    <type>Lookup</type>
</CustomField>