force-app/main/default/objects/BrowniePoints__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>BP_Number__c</columns>
    <columns>Event_Year__c</columns>
    <columns>Event_Month__c</columns>
    <columns>Year_Month__c</columns>
    <columns>NAME</columns>
    <columns>Points__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>