force-app/main/default/objects/BrowniePoints__c/listViews/X2022_Brownie_Points.listView-meta.xml
<ListView>
    <fullName>X2022_Brownie_Points</fullName>
    <columns>OBJECT_ID</columns>
    <columns>BP_Number__c</columns>
    <columns>Event_Year__c</columns>
    <columns>Event_Month__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Event_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>2022 Brownie Points</label>
</ListView>